retrieveNA31/objects/Core_Product__c.object
<CustomObject>
    <description>Used in product POC</description>
    <fields>
        <fullName>Core_Attr_CdNm__c</fullName>
        <label>Core_Attr_CdNm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Attr_DivCd__c</fullName>
        <label>Core_Attr_DivCd</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Attr_DivShrtNm__c</fullName>
        <label>Core_Attr_DivShrtNm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Attr_GrpCd__c</fullName>
        <label>Core_Attr_GrpCd</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Attr_GrpShrtNm__c</fullName>
        <label>Core_Attr_GrpShrtNm</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Attr_ProductStatus__c</fullName>
        <label>Core_Attr_ProductStatus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Descr__c</fullName>
        <label>Core_Descr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_EPMID__c</fullName>
        <externalId>true</externalId>
        <label>Core_EPMID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Core_Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Core_EPMID__c</columns>
        <columns>Core_Descr__c</columns>
        <columns>Core_Attr_CdNm__c</columns>
        <columns>Core_Attr_DivCd__c</columns>
        <columns>Core_Attr_DivShrtNm__c</columns>
        <columns>Core_Attr_GrpCd__c</columns>
        <columns>Core_Attr_GrpShrtNm__c</columns>
        <columns>Core_Attr_ProductStatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Core_Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Core_Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>